# PCS217-CDD

./: README.md  jenkins-git_config.xml
ExpressionEvaluationEngine/: CMakeLists.txt  Jenkinsfile  README.md  jenkins_config.xml
ExpressionEvaluationEngine/c/: math_kernel.c  math_kernel.h
ExpressionEvaluationEngine/cpp/: expression_engine.cpp  expression_engine.h
ExpressionEvaluationEngine/java/: ExpressionApp.java
ExpressionEvaluationEngine/jni/: ExpressionJNI.cpp
calc_multilingual/: Makefile  README.md  calc.c  calc.h  main.cpp
cmake_calc/: .gitignore  README.md
cmake_calc/calculator/: CMakeLists.txt
cmake_calc/calculator/src/: calc.h  div.c  main.c
